--- a/css/styles.css
+++ b/css/styles.css
@@ -21,6 +21,12 @@
 }
 
 .bottomsection img {
-	width: 300px;
-	height: 300px;
+	width: 320px;
+	height: 320px;
+	margin-right: 32px;
+	margin-bottom: 32px;
+}
+
+.bottomsection img:hover {
+	opacity: 0.8;
 }
